README Update and small tweaks

--- a/NASim_Website_Demo.ipynb
+++ b/NASim_Website_Demo.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -117,14 +117,6 @@
       "|  (0, 0) |    False    |   False   |   False    |  0.0  |       0.0       |  0.0   | False | False | False  |\n",
       "|  (0, 0) |    False    |   False   |   False    |  0.0  |       0.0       |  0.0   | False | False | False  |\n",
       "+---------+-------------+-----------+------------+-------+-----------------+--------+-------+-------+--------+\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/gymnasium/utils/passive_env_checker.py:364: UserWarning: \u001b[33mWARN: No render fps was declared in the environment (env.metadata['render_fps'] is None or not defined), rendering may occur at inconsistent fps.\u001b[0m\n",
-      "  logger.warn(\n"
      ]
     }
    ],
@@ -224,23 +216,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'AnAgent' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m agent \u001b[38;5;241m=\u001b[39m \u001b[43mAnAgent\u001b[49m(\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m)\n\u001b[1;32m      3\u001b[0m o, info \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mreset()\n\u001b[1;32m      4\u001b[0m total_reward \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'AnAgent' is not defined"
-     ]
-    }
-   ],
    "source": [
+    "Example Agent:\n",
+    "\n",
     "agent = AnAgent(...)\n",
     "\n",
     "o, info = env.reset()\n",
@@ -254,6 +234,159 @@
     "\n",
     "print(\"Done\")\n",
     "print(\"Total reward =\", total_reward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: ipykernel_launcher.py [-h] [-s SEED] [-o] [-p] [-f] env_name\n",
+      "ipykernel_launcher.py: error: the following arguments are required: env_name\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Brute Force Example Agent:\n",
+    "\n",
+    "\"\"\"An bruteforce agent that repeatedly cycles through all available actions in\n",
+    "order.\n",
+    "\n",
+    "To run 'tiny' benchmark scenario with default settings, run the following from\n",
+    "the nasim/agents dir:\n",
+    "\n",
+    "$ python bruteforce_agent.py tiny\n",
+    "\n",
+    "This will run the agent and display progress and final results to stdout.\n",
+    "\n",
+    "To see available running arguments:\n",
+    "\n",
+    "$ python bruteforce_agent.py --help\n",
+    "\"\"\"\n",
+    "\n",
+    "from itertools import product\n",
+    "\n",
+    "import nasim\n",
+    "\n",
+    "LINE_BREAK = \"-\"*60\n",
+    "\n",
+    "\n",
+    "def run_bruteforce_agent(env, step_limit=1e6, verbose=True):\n",
+    "    \"\"\"Run bruteforce agent on nasim environment.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    env : nasim.NASimEnv\n",
+    "        the nasim environment to run agent on\n",
+    "    step_limit : int, optional\n",
+    "        the maximum number of steps to run agent for (default=1e6)\n",
+    "    verbose : bool, optional\n",
+    "        whether to print out progress messages or not (default=True)\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    int\n",
+    "        timesteps agent ran for\n",
+    "    float\n",
+    "        the total reward recieved by agent\n",
+    "    bool\n",
+    "        whether the goal was reached or not\n",
+    "    \"\"\"\n",
+    "    if verbose:\n",
+    "        print(LINE_BREAK)\n",
+    "        print(\"STARTING EPISODE\")\n",
+    "        print(LINE_BREAK)\n",
+    "        print(\"t: Reward\")\n",
+    "\n",
+    "    env.reset()\n",
+    "    total_reward = 0\n",
+    "    done = False\n",
+    "    env_step_limit_reached = False\n",
+    "    steps = 0\n",
+    "    cycle_complete = False\n",
+    "\n",
+    "    if env.flat_actions:\n",
+    "        act = 0\n",
+    "    else:\n",
+    "        act_iter = product(*[range(n) for n in env.action_space.nvec])\n",
+    "\n",
+    "    while not done and not env_step_limit_reached and steps < step_limit:\n",
+    "        if env.flat_actions:\n",
+    "            act = (act + 1) % env.action_space.n\n",
+    "            cycle_complete = (steps > 0 and act == 0)\n",
+    "        else:\n",
+    "            try:\n",
+    "                act = next(act_iter)\n",
+    "                cycle_complete = False\n",
+    "            except StopIteration:\n",
+    "                act_iter = product(*[range(n) for n in env.action_space.nvec])\n",
+    "                act = next(act_iter)\n",
+    "                cycle_complete = True\n",
+    "\n",
+    "        _, rew, done, env_step_limit_reached, _ = env.step(act)\n",
+    "        total_reward += rew\n",
+    "\n",
+    "        if cycle_complete and verbose:\n",
+    "            print(f\"{steps}: {total_reward}\")\n",
+    "        steps += 1\n",
+    "\n",
+    "    if done and verbose:\n",
+    "        print(LINE_BREAK)\n",
+    "        print(\"EPISODE FINISHED\")\n",
+    "        print(LINE_BREAK)\n",
+    "        print(f\"Goal reached = {env.goal_reached()}\")\n",
+    "        print(f\"Total steps = {steps}\")\n",
+    "        print(f\"Total reward = {total_reward}\")\n",
+    "    elif verbose:\n",
+    "        print(LINE_BREAK)\n",
+    "        print(\"STEP LIMIT REACHED\")\n",
+    "        print(LINE_BREAK)\n",
+    "\n",
+    "    if done:\n",
+    "        done = env.goal_reached()\n",
+    "\n",
+    "    return steps, total_reward, done\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    import argparse\n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    parser.add_argument(\"env_name\", type=str, help=\"benchmark scenario name\")\n",
+    "    parser.add_argument(\"-s\", \"--seed\", type=int, default=0,\n",
+    "                        help=\"random seed\")\n",
+    "    parser.add_argument(\"-o\", \"--partially_obs\", action=\"store_true\",\n",
+    "                        help=\"Partially Observable Mode\")\n",
+    "    parser.add_argument(\"-p\", \"--param_actions\", action=\"store_true\",\n",
+    "                        help=\"Use Parameterised action space\")\n",
+    "    parser.add_argument(\"-f\", \"--box_obs\", action=\"store_true\",\n",
+    "                        help=\"Use 2D observation space\")\n",
+    "    args = parser.parse_args()\n",
+    "\n",
+    "    nasimenv = nasim.make_benchmark(\n",
+    "        args.env_name,\n",
+    "        args.seed,\n",
+    "        not args.partially_obs,\n",
+    "        not args.param_actions,\n",
+    "        not args.box_obs\n",
+    "    )\n",
+    "    if not args.param_actions:\n",
+    "        print(nasimenv.action_space.n)\n",
+    "    else:\n",
+    "        print(nasimenv.action_space.nvec)\n",
+    "    run_bruteforce_agent(nasimenv)\n"
    ]
   }
  ],
