Network Attack Simulator GitHub Master folder included for attack agent

--- a/NASim_Website_Demo.ipynb
+++ b/NASim_Website_Demo.ipynb
@@ -388,6 +388,19 @@
     "        print(nasimenv.action_space.nvec)\n",
     "    run_bruteforce_agent(nasimenv)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running Attack Agents (in terminal):\n",
+    "\n",
+    "- Cd into JacobAlbrightHumeCenterSummer2023/NetworkAttackSimulator-master/nasim/agents and run python attack_agent.py scenario\n",
+    "\n",
+    "- Example run: python bruteforce_agent.py tiny\n",
+    "\n",
+    "Could not view agent policies of ql_agnet using \"python ql_agent.py tiny --render_eval\" --> throws error #15: Initializing libiomp5.dylib, but found libop.dylib already initialized\n"
+   ]
   }
  ],
  "metadata": {
