Scenario generation and agent notes

--- a/NASim_Website_Demo.ipynb
+++ b/NASim_Website_Demo.ipynb
@@ -51,8 +51,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NASim Environment Load Reference\n",
+    "\n",
+    "nasim.make_benchmark(scenario_name, seed=None, fully_obs=False, flat_actions=True, flat_obs=True, render_mode=None): Make a new benchmark NASim environment\n",
+    "\n",
+    "- \n",
+    "    - scenario_name (str): the name of the benchmark environment\n",
+    "    - seed (int, optional): random seed to use to generate environment (default=None)\n",
+    "    - fully_obs (bool, optional):  the observability mode of environment, if True then uses fully observable mode, otherwise partially observable (default=False)\n",
+    "    - flat_actions (bool, optional): if true then uses a flat action space, otherwise will use parameterised action space (default=True).\n",
+    "    - flat_obs (bool, optional): if true then uses a 1D observation space. If False will use a 2D observation space (default=True)\n",
+    "    - render_mode (str, optional): The render mode to use for the environment.\n",
+    "\n",
+    "nasim.load(path, fully_obs=False, flat_actions=True, flat_obs=True, name=None, render_mode=None): Load NASim Environment from a .yaml source file\n",
+    "\n",
+    " -   \n",
+    "    - path (str): path to the .yaml scenario file\n",
+    "    - fully_obs (bool, optional): The observability mode of environment, if True then uses fully observable mode, otherwise partially observable (default=False)\n",
+    "    - flat_actions (bool, optional): if true then uses a flat action space, otherwise will use parameterised action space (default=True).\n",
+    "    - flat_obs (bool, optional): if true then uses a 1D observation space. If False will use a 2D observation space (default=True)\n",
+    "    - name (str, optional): the scenarios name, if None name will be generated from path (default=None)\n",
+    "    - render_mode (str, optional): The render mode to use for the environment.\n",
+    "\n",
+    "nasim.generate(): construct environment from atuo generated network\n",
+    "\n",
+    "-    \n",
+    "    - num_hosts (int): number of hosts to include in network (minimum is 3)\n",
+    "    - num_services (int): number of services to use in environment (minimum is 1)\n",
+    "    - fully_obs (bool, optional): The observability mode of environment, if True then uses fully observable mode, otherwise partially observable (default=False)\n",
+    "    - flat_actions (bool, optional): if true then uses a flat action space, otherwise will use parameterised action space (default=True).\n",
+    "    - flat_obs (bool, optional): if true then uses a 1D observation space. If False will use a 2D observation space (default=True)\n",
+    "    - render_mode (str, optional): The render mode to use for the environment.\n",
+    "    - params (dict, optional): generator params\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +112,10 @@
     "\n",
     "# pass in some other parameters (say the number of possible operating systems) can be passed in as keyword arguments:\n",
     "env4 = nasim.generate(5, 3, num_os=3)\n",
+    "\n",
+    "env_opt = nasim.make_benchmark(\"tiny\", seed=None, fully_obs=False, flat_actions=True, flat_obs=True, render_mode=None)\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -184,12 +228,12 @@
    "source": [
     "#testing rendering for larger/more complex network\n",
     "# to specify render mode\n",
-    "env6 = gym.make(\"nasim:MediumPO2DVA-v0\", render_mode=\"human\")\n",
+    "env7 = gym.make(\"nasim:MediumPO2DVA-v0\", render_mode=\"human\")\n",
     "\n",
-    "env6.reset()\n",
+    "env7.reset()\n",
     "# render the environment\n",
     "# (if render_mode=\"human\" is not passed during initialization this will do nothing)\n",
-    "env6.render()\n"
+    "env7.render()\n"
    ]
   },
   {
@@ -237,159 +281,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "usage: ipykernel_launcher.py [-h] [-s SEED] [-o] [-p] [-f] env_name\n",
-      "ipykernel_launcher.py: error: the following arguments are required: env_name\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Brute Force Example Agent:\n",
-    "\n",
-    "\"\"\"An bruteforce agent that repeatedly cycles through all available actions in\n",
-    "order.\n",
-    "\n",
-    "To run 'tiny' benchmark scenario with default settings, run the following from\n",
-    "the nasim/agents dir:\n",
-    "\n",
-    "$ python bruteforce_agent.py tiny\n",
-    "\n",
-    "This will run the agent and display progress and final results to stdout.\n",
-    "\n",
-    "To see available running arguments:\n",
-    "\n",
-    "$ python bruteforce_agent.py --help\n",
-    "\"\"\"\n",
-    "\n",
-    "from itertools import product\n",
-    "\n",
-    "import nasim\n",
-    "\n",
-    "LINE_BREAK = \"-\"*60\n",
-    "\n",
-    "\n",
-    "def run_bruteforce_agent(env, step_limit=1e6, verbose=True):\n",
-    "    \"\"\"Run bruteforce agent on nasim environment.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    env : nasim.NASimEnv\n",
-    "        the nasim environment to run agent on\n",
-    "    step_limit : int, optional\n",
-    "        the maximum number of steps to run agent for (default=1e6)\n",
-    "    verbose : bool, optional\n",
-    "        whether to print out progress messages or not (default=True)\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    int\n",
-    "        timesteps agent ran for\n",
-    "    float\n",
-    "        the total reward recieved by agent\n",
-    "    bool\n",
-    "        whether the goal was reached or not\n",
-    "    \"\"\"\n",
-    "    if verbose:\n",
-    "        print(LINE_BREAK)\n",
-    "        print(\"STARTING EPISODE\")\n",
-    "        print(LINE_BREAK)\n",
-    "        print(\"t: Reward\")\n",
-    "\n",
-    "    env.reset()\n",
-    "    total_reward = 0\n",
-    "    done = False\n",
-    "    env_step_limit_reached = False\n",
-    "    steps = 0\n",
-    "    cycle_complete = False\n",
-    "\n",
-    "    if env.flat_actions:\n",
-    "        act = 0\n",
-    "    else:\n",
-    "        act_iter = product(*[range(n) for n in env.action_space.nvec])\n",
-    "\n",
-    "    while not done and not env_step_limit_reached and steps < step_limit:\n",
-    "        if env.flat_actions:\n",
-    "            act = (act + 1) % env.action_space.n\n",
-    "            cycle_complete = (steps > 0 and act == 0)\n",
-    "        else:\n",
-    "            try:\n",
-    "                act = next(act_iter)\n",
-    "                cycle_complete = False\n",
-    "            except StopIteration:\n",
-    "                act_iter = product(*[range(n) for n in env.action_space.nvec])\n",
-    "                act = next(act_iter)\n",
-    "                cycle_complete = True\n",
-    "\n",
-    "        _, rew, done, env_step_limit_reached, _ = env.step(act)\n",
-    "        total_reward += rew\n",
-    "\n",
-    "        if cycle_complete and verbose:\n",
-    "            print(f\"{steps}: {total_reward}\")\n",
-    "        steps += 1\n",
-    "\n",
-    "    if done and verbose:\n",
-    "        print(LINE_BREAK)\n",
-    "        print(\"EPISODE FINISHED\")\n",
-    "        print(LINE_BREAK)\n",
-    "        print(f\"Goal reached = {env.goal_reached()}\")\n",
-    "        print(f\"Total steps = {steps}\")\n",
-    "        print(f\"Total reward = {total_reward}\")\n",
-    "    elif verbose:\n",
-    "        print(LINE_BREAK)\n",
-    "        print(\"STEP LIMIT REACHED\")\n",
-    "        print(LINE_BREAK)\n",
-    "\n",
-    "    if done:\n",
-    "        done = env.goal_reached()\n",
-    "\n",
-    "    return steps, total_reward, done\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    import argparse\n",
-    "    parser = argparse.ArgumentParser()\n",
-    "    parser.add_argument(\"env_name\", type=str, help=\"benchmark scenario name\")\n",
-    "    parser.add_argument(\"-s\", \"--seed\", type=int, default=0,\n",
-    "                        help=\"random seed\")\n",
-    "    parser.add_argument(\"-o\", \"--partially_obs\", action=\"store_true\",\n",
-    "                        help=\"Partially Observable Mode\")\n",
-    "    parser.add_argument(\"-p\", \"--param_actions\", action=\"store_true\",\n",
-    "                        help=\"Use Parameterised action space\")\n",
-    "    parser.add_argument(\"-f\", \"--box_obs\", action=\"store_true\",\n",
-    "                        help=\"Use 2D observation space\")\n",
-    "    args = parser.parse_args()\n",
-    "\n",
-    "    nasimenv = nasim.make_benchmark(\n",
-    "        args.env_name,\n",
-    "        args.seed,\n",
-    "        not args.partially_obs,\n",
-    "        not args.param_actions,\n",
-    "        not args.box_obs\n",
-    "    )\n",
-    "    if not args.param_actions:\n",
-    "        print(nasimenv.action_space.n)\n",
-    "    else:\n",
-    "        print(nasimenv.action_space.nvec)\n",
-    "    run_bruteforce_agent(nasimenv)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -400,6 +291,20 @@
     "- Example run: python bruteforce_agent.py tiny\n",
     "\n",
     "Could not view agent policies of ql_agnet using \"python ql_agent.py tiny --render_eval\" --> throws error #15: Initializing libiomp5.dylib, but found libop.dylib already initialized\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Available Agents:\n",
+    "\n",
+    "- keyboard_agent.py: An agent that is controlled by the user via terminal inputs.\n",
+    "- random_agent.py: A random agent that selects an action randomly from all available actions at each time step.\n",
+    "- bruteforce_agent.py: An agent that repeatedly cycles through all available actions in order.\n",
+    "- ql_agent.py: A Tabular, epsilod-greedy Q-Learning reinforcement learning agent.\n",
+    "- ql_replay_agent.py: A Tabular, epsilod-greedy Q-Learning reinforcement learning agent (same as above) that incorporates an experience replay.\n",
+    "- dqn_agent.py: A Deep Q-Network reinforcement learning agent using experience replay and a target Q-Network."
    ]
   }
  ],
